Update Research Plan

--- a/testing/jailbreak_detection_3.ipynb
+++ b/testing/jailbreak_detection_3.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "This notebook implements the detection phase of the research pipeline:\n",
     "\n",
-    "1. Load Gemma-3-1B-IT model with NNSight\n",
-    "2. Load SAEs for layers 7, 13, 17, 22 (Gemma Scope 2)\n",
+    "1. Load gemma-3-4b-it model with NNSight\n",
+    "2. Load SAEs for layers [9, 17, 22, 29] (Gemma Scope 2)\n",
     "3. Load JailbreakBench dataset + safe baseline prompts\n",
     "4. Extract SAE latent activations for both prompt types\n",
     "5. Compute statistics:\n",
