--- a/archive/cross_layer_causal_sae_jailbreak_detection_V-0.2.ipynb
+++ b/archive/cross_layer_causal_sae_jailbreak_detection_V-0.2.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Cross-Layer Causal SAE for Multi-Turn Jailbreak Detection\n",
     "\n",
+    "- V0.2:  Save and load Trojectory / SAE extraction\n",
+    "\n",
     "This notebook implements the core pipeline from the thesis research plan:\n",
     "\n",
     "1. **Crescendomation Red-Teaming**: Use an attacker LLM (GPT-4o) to run multi-turn Crescendo attacks against a local Gemma-3-IT target model\n",
